--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a class="navlink" href="index.html">Home</a>
                 </li>
                 <li class="navbutton">
-                    Articles
+                    <p class="navlink">Articles</p>
                     <div class="dropdown">
                         <ul>
                             <li class="dropbutton">
