--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -23,7 +23,7 @@
                     <a class="navlink" href="../index.html">Home</a>
                 </li>
                 <li class="navbutton">
-                    Articles
+                    <p class="navlink">Articles</p>
                     <div class="dropdown">
                         <ul>
                             <li class="dropbutton">
@@ -96,7 +96,7 @@
             <div class="articlediv">
                 <h3 class="paragraphsubheader">Satellites of Mars</h3>
                 <p class="paragraph">Mars has two natural satellites - Phobos and Deimos. They are named after the Greek gods of fear and terror respectively. Phobos is the bigger of the two and orbits closer to Mars. Both are small irregularly-shaped bodies and it is believed that they originated from the Asteroid Belt.</p>
-                <div class="captionbox center" style="width:375px">
+                <div class="captionbox center" style="width:375.25px">
                     <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
                     <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
                     <p class="caption">Phobos and Deimos are irregularly-shaped satellites of Mars</p>
