--- a/pages/star.html
+++ b/pages/star.html
@@ -23,7 +23,7 @@
                     <a class="navlink" href="../index.html">Home</a>
                 </li>
                 <li class="navbutton">
-                    Articles
+                    <p class="navlink">Articles</p>
                     <div class="dropdown">
                         <ul>
                             <li class="dropbutton">
@@ -93,25 +93,25 @@
                 <tr class="firstrow">
                     <th>Class</th><th>Effective temperature</th><th>Main-sequence mass</th><th>Main-sequence radius</th><th>Main-sequence luminosity</th><th>Fraction of main-sequence stars</th><th>Example main-sequence star</th>
                 </tr>
-                <tr class="firstrow">
+                <tr >
                     <th>O</th><th>≥ 30,000 K</th><th>≥ 16 M☉</th><th>≥ 6.6 R☉</th><th>≥ 30,000 L☉</th><th>~0.00003%</th><th>Mu Columbae</th>
                 </tr>
-                <tr class="firstrow">
+                <tr >
                     <th>B</th><th>10,000-30,000 K</th><th>2.1-16 M☉</th><th>1.8-6.6 R☉</th><th>25-30,000 L☉</th><th>0.13%</th><th>Regulus</th>
                 </tr>
-                <tr class="firstrow">
+                <tr >
                     <th>A</th><th>7,500-10,000 K</th><th>1.4-2.1 M☉</th><th>1.4-1.8 R☉</th><th>5-25 L☉</th><th>0.6%</th><th>Sirius A</th>
                 </tr>
-                <tr class="firstrow">
+                <tr >
                     <th>F</th><th>6,000-7,500 K</th><th>1.04-1.4 M☉</th><th>1.15-1.4 R☉</th><th>1.5-5 L☉</th><th>3%</th><th>Procyon A</th>
                 </tr>
-                <tr class="firstrow">
+                <tr >
                     <th>G</th><th>5,200-6,000 K</th><th>0.8-1.04 M☉</th><th>0.96-1.15 R☉</th><th>0.6-1.5 L☉</th><th>7.6%</th><th>Sun</th>
                 </tr>
-                <tr class="firstrow">
+                <tr >
                     <th>K</th><th>3,700-5,200 K</th><th>0.45-0.8 M☉</th><th>0.7-0.96 R☉</th><th>0.08-0.6 L☉</th><th>12.1%</th><th>Epsilon Indi</th>
                 </tr>
-                <tr class="firstrow">
+                <tr >
                     <th>M</th><th>2,400-3,700 K</th><th>0.08-0.45 M☉</th><th>≤ 0.7 R☉</th><th>≤ 0.08 L☉</th><th>76.45%</th><th>Proxima Centauri</th>
                 </tr>
             </table>
