Table of Content, links (WIP)

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -59,7 +59,23 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Asteroid Belt</h2>
+            <h2 class="asidetitle">Asteroid belt</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</a>
+                </li>
+                <li>
+                    <a href="#AsteroidsOfTheAsteroidBelt">Asteroids of the asteroid belt</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Ceres">Ceres</a>
+                        </li>
+                        <li>
+                            <a href="#Vesta">Vesta</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </aside>
 
         <aside class="asideright">
@@ -73,19 +89,19 @@
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Asteroid Belt</h1>
+        <h1 class="bigpageheader">Asteroid belt</h1>
         <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
             <p class="paragraph">The asteroid belt is a region in the Solar System, located roughly between the orbits of the planets Jupiter and Mars. It contains many irregularly shaped bodies called asteroids or minor planets. This asteroid belt is also known as the main asteroid belt to distinguish it from other asteroid populations such as near-Earth asteroids and trojan asteroids.</p>
-            <h2 class="paragraphheader">Discovery of the Asteroid Belt</h2>
+            <h2 class="paragraphheader" id="DiscoveryOfTheAsteroidBelt">Discovery of the asteroid belt</h2>
             <p class="paragraph">In 1596, Johannes Kepler assumed that there must be a planet between Mars and Jupiter, due to the gap between the planets. Three centuries later, in 1801, the first asteroid was discovered. It was named Ceres after the Roman goddess of harvest.</p>
             <p class="paragraph">Soon, other objects were discovered - Pallas, Juno, Vesta and Astraea. Scientists decided to classify the objects separately from the planets, calling them "asteroids" instead.</p>
             <p class="paragraph">Today, there are over half a million discovered asteroids, many of which are located in the belt.</p>
-            <h2 class="paragraphheader">Asteroids in the Asteroid Belt</h2>
-            <p class="paragraph">This is a list of the largest asteroids in the Asteroid Belt.</p>
+            <h2 class="paragraphheader" id="AsteroidsOfTheAsteroidBelt">Asteroids in the asteroid belt</h2>
+            <p class="paragraph">This is a list of the largest asteroids in the asteroid belt.</p>
             <div class="wrapper">
                 <table>
                     <tr class="firstrow">
@@ -128,16 +144,16 @@
                     <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="245" height="240">
                     <p class="caption">Ceres</p>
                 </div>
-                <h3 class="paragraphsubheader">Ceres</h3>
-                <p class="paragraph">Ceres is the first asteroid to be discovered. It is the biggest of the asteroids in the Asteroid Belt and is the only such one to be a dwarf planet. It is named after the Roman goddess of agriculture and fertility. The surface of the asteroid consists of ice and carbonates. Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.</p>
+                <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
+                <p class="paragraph">Ceres is the first asteroid to be discovered. It is the biggest of the asteroids in the asteroid belt and is the only such one to be a dwarf planet. It is named after the Roman goddess of agriculture and fertility. The surface of the asteroid consists of ice and carbonates. Cryovolcanism activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single mountain (Ahuna Mons) exist.</p>
             </div>
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/asteroids/vesta.jpg" alt="Vesta" width="240" height="240">
                     <p class="caption">Vesta</p>
                 </div>
-                <h3 class="paragraphsubheader">Vesta</h3>
-                <p class="paragraph">Vesta is the second biggest asteroid in the Asteroid Belt. It is named after the Roman goddess of the home and family. Vesta's shape is close to an oblate spheroid, but is not a dwarf planet, because it is not in hydrostatic equilibrium.</p>
+                <h3 class="paragraphsubheader" id="Vesta">Vesta</h3>
+                <p class="paragraph">Vesta is the second biggest asteroid in the asteroid belt. It is named after the Roman goddess of the home and family. Vesta's shape is close to an oblate spheroid, but is not a dwarf planet, because it is not in hydrostatic equilibrium.</p>
             </div>
             <h3 class="paragraphsubheader"></h3>
             <p class="paragraph"></p>
