--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -60,6 +60,43 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Natural satellite</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#HistoryAndDefiningSatellites">History and defining satellites</a>
+                </li>
+                <li>
+                    <a href="#SatellitesOfPlanets">Satellites of planets</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#TheMoon">The Moon</a>
+                        </li>
+                        <li>
+                            <a href="#SatellitesOfMars">Satellites of Mars</a>
+                        </li>
+                        <li>
+                            <a href="#GalileanSatellites">Galilean satellites</a>
+                        </li>
+                        <li>
+                            <a href="#OtherJovianSatellites">Other Jovian satellites</a>
+                        </li>
+                        <li>
+                            <a href="#SatellitesOfSaturn">Satellites of Saturn</a>
+                        </li>
+                        <li>
+                            <a href="#SatellitesOfUranus">Satellites of Uranus</a>
+                        </li>
+                        <li>
+                            <a href="#SatellitesOfNeptune">Satellites of Neptune</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#SatellitesOfDwarfPlanets">Satellites of dwarf planets</a>
+                </li>
+                <li>
+                    <a href="#SatellitesOfAsteroids">Satellites of asteroids</a>
+                </li>
+            </ul>
         </aside>
 
         <aside class="asideright">
@@ -81,20 +118,20 @@
         <section class="maincontent">
             <p class="paragraph">A natural satellite is an astronomical body that orbits a planet, a minor planet, or another satellite. Natural satellites are also called moons.</p>
             <p class="paragraph">Six of the eight planets in the Solar System have at least one satellite. Many of the known dwarf planets also have satellites, as well as some asteroids.</p>
-            <h2 class="paragraphheader">History and defining satellites</h2>
+            <h2 class="paragraphheader" id="HistoryAndDefiningSatellites">History and defining satellites</h2>
             <p class="paragraph">Earth's Moon is the first known satellite. Because other satellites weren't discovered, the Moon was considered a planet. Galileo's discovery of the Galilean moons of Jupiters lead to the creation of the new class of objects. The first one to call them "satellites" was Johannes Kepler.</p>
             <p class="paragraph">The launch of Sputnik marked the first artificial object in Earth's orbits. Satellites of planets had to be distinguished between natural and artificial for the first time.</p>
-            <h2 class="paragraphheader">Satellites of planets</h2>
+            <h2 class="paragraphheader" id="SatellitesOfPlanets">Satellites of planets</h2>
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="The Moon" width="253" height="240">
                     <p class="caption">The Moon</p>
                 </div>
-                <h3 class="paragraphsubheader">The Moon</h3>
+                <h3 class="paragraphsubheader" id="TheMoon">The Moon</h3>
                 <p class="paragraph">The Moon is the only natural satellite orbiting Earth. It is also the only natural astronomic body other than Earth that has been visited by people. It is the fifth largest satellite in the Solar System and is the largest relative to it's parent planet. The Moon has no magnetic field, a hydrosphere, or a significant athmosphere.</p>
             </div>
             <div class="articlediv">
-                <h3 class="paragraphsubheader">Satellites of Mars</h3>
+                <h3 class="paragraphsubheader" id="SatellitesOfMars">Satellites of Mars</h3>
                 <p class="paragraph">Mars has two natural satellites - Phobos and Deimos. They are named after the Greek gods of fear and terror respectively. Phobos is the bigger of the two and orbits closer to Mars. Both are small irregularly-shaped bodies and it is believed that they originated from the Asteroid Belt.</p>
                 <div class="captionbox center" style="width:375.25px">
                     <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
@@ -103,7 +140,7 @@
                 </div>
             </div>
             <div class="articlediv">
-                <h3 class="paragraphsubheader">Galilean satellites</h3>
+                <h3 class="paragraphsubheader" id="GalileanSatellites">Galilean satellites</h3>
                 <p class="paragraph">Jupiter has four round moons - Ganymede, Callisto, Io and Europa. They were discovered by Galileo Galilei in 1610. Ganymede is the largest known satellite and is bigger than Mercury. Of the four, Europa is the only one that is smaller than Earth's Moon. Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other. </p>
                 <div class="captionbox center">
                     <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
@@ -115,10 +152,10 @@
                 <p class="paragraph">It is speculated that Europa could have a subsurface ocean where extraterrestrial life could exist. </p>
             </div>
             <div class="articlediv">
-                <h3 class="paragraphsubheader">Other Jovian satellites</h3>
+                <h3 class="paragraphsubheader" id="OtherJovianSatellites">Other Jovian satellites</h3>
                 <p class="paragraph">76 other moons are known to orbit Jupiter. Just like the four Galilean moons, the rest are assigned names of lovers of Zeus/Jupiter and their descendants. They are significantly smaller than the Galilean moons. The biggest of them is Amalthea, and the most massive is Himalia.</p>
             </div>
-            <h3 class="paragraphsubheader">Satellites of Saturn</h3>
+            <h3 class="paragraphsubheader" id="SatellitesOfSaturn">Satellites of Saturn</h3>
             <p class="paragraph">There are 83 moons known to orbit Saturn. The ones discovered earlier were named after Titans and Giants from Greek mythology. Subsequent moons were named after other Greek mythological figures, Celtic and Inuit gods and Norse ice giants.</p>
             <div class="articlediv">
                 <div class="captionbox right">
@@ -141,7 +178,7 @@
             </div>
             <p class="paragraph">The biggest irregular-shaped satellite is Hyperion, and Phoebe is the most massive. Satellites like Atlas, Pan and Daphnis are called shepherd moons. They have distinct equatorial ridges formed from clearing Saturn's rings.</p>
             <div class="articlediv">
-                <h3 class="paragraphsubheader">Satellites of Uranus</h3>
+                <h3 class="paragraphsubheader" id="SatellitesOfUranus">Satellites of Uranus</h3>
                 <p class="paragraph">27 moons are known to orbit Uranus, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.</p>
                 <div class="captionbox center">
                     <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
@@ -157,7 +194,7 @@
                     <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton" width="240" height="240">
                     <p class="caption">Triton</p>
                 </div>
-                <h3 class="paragraphsubheader">Satellites of Neptune</h3>
+                <h3 class="paragraphsubheader" id="SatellitesOfNeptune">Satellites of Neptune</h3>
                 <p class="paragraph">There are 14 known Neptunian satellites, named after Greek water deities. The biggest satellite - Triton, is believed to be a dwarf planet caught by the gravitation of Neptune. </p>
             </div>
             <div class="articlediv">
@@ -165,7 +202,7 @@
                     <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon" width="240" height="240">
                     <p class="caption">Charon</p>
                 </div>
-                <h2 class="paragraphheader">Satellites of dwarf planets</h2>
+                <h2 class="paragraphheader" id="SatellitesOfDwarfPlanets">Satellites of dwarf planets</h2>
                 <p class="paragraph">Pluto has five satellites - Charon, Hydra, Nix, Kerberos and Styx. Names originate from Greek mythology and are related to the underworld. The biggest moon - Charon, named after the ferryman of the underworld, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.</p>
                 <p class="paragraph">Eris has one moon - Dysnomia, named after the daemon of lawlessness in Greek mythology.</p>
                 <p class="paragraph">Haumea has two satellites - Hi'iaka and Namaka, both named after Hawaiian deities.</p>
@@ -173,7 +210,7 @@
                 <p class="paragraph">Other dwarf planets with satellites include Gonggong with Xiangliu, Quaoar with Weywot and Orcus with Vanth.</p>
             </div>
             <div class="articlediv">
-                <h2 class="paragraphheader">Satellites of asteroids</h2>
+                <h2 class="paragraphheader" id="SatellitesOfAsteroids">Satellites of asteroids</h2>
                 <p class="paragraph">It is possible for asteroids to have satellites. The first one to be discovered was 243 Ida's satellite Dactyl. Some asteroids have more than one satellite. 90 Antiope is a binary system, where the two bodies are of similar sizes.</p>
             </div>
         </section>
