--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link rel="stylesheet" href="assets/style.css">
-        <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+        <link rel="stylesheet" href="../assets/style.css">
+        <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
         <title>Gabrova</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -20,29 +20,29 @@
                     <img src="logo.png" alt="LOGO">
                 </li>
                 <li class="navbutton">
-                    <a class="navlink" href="index.html">Home</a>
+                    <a class="navlink" href="../index.html">Home</a>
                 </li>
                 <li class="navbutton">
                     <p class="navlink">Articles</p>
                     <div class="dropdown">
                         <ul>
                             <li class="dropbutton">
-                                <a class="navlink" href="pages/planet.html">Planets</a>
+                                <a class="navlink" href="planet.html">Planets</a>
                             </li>
                             <li class="dropbutton">
-                                <a class="navlink" href="pages/natural-satellite.html">Moons</a>
+                                <a class="navlink" href="natural-satellite.html">Moons</a>
                             </li>
                             <li class="dropbutton">
-                                <a class="navlink" href="pages/asteroid-belt.html">Asteroid Belt</a>
+                                <a class="navlink" href="asteroid-belt.html">Asteroid Belt</a>
                             </li>
                             <li class="dropbutton">
-                                <a class="navlink" href="pages/tno.html">TNOs</a>
+                                <a class="navlink" href="tno.html">TNOs</a>
                             </li>
                             <li class="dropbutton">
-                                <a class="navlink" href="pages/exoplanet.html">Exoplanets</a>
+                                <a class="navlink" href="exoplanet.html">Exoplanets</a>
                             </li>
                             <li class="dropbutton">
-                                <a class="navlink" href="pages/star.html">Stars</a>
+                                <a class="navlink" href="star.html">Stars</a>
                             </li>
                         </ul>
                     </div>
@@ -59,15 +59,7 @@
         <!--The side panels-->
 
         <aside class="asideleft">
-            <h2 class="asidetitle">Home</h2>
-            <ul class="toc">
-                <li>
-                    <a href="#Welcome">Welcome</a>
-                </li>
-                <li>
-                    <a href="#WhatDoesGabrovaMean">What does Gabrova mean?</a>
-                </li>
-            </ul>
+            <h2 class="asidetitle">Earth</h2>
         </aside>
 
         <aside class="asideright">
@@ -81,18 +73,12 @@
 
         <!--Title on the main page-->
 
-        <h1 class="bigpageheader">Gabrova</h1>
-        <h2 class="smallpageheader">Astronomy and geography of the planets</h2>
+        <h1 class="bigpageheader">Earth</h1>
+        <!--<h2 class="smallpageheader">Geography of the planets</h2>-->
 
         <!--The main page article-->
 
         <section class="maincontent">
-            <h2 class="paragraphheader" id="Welcome">Welcome</h2>
-            <p class="paragraph">Gabrova is the place for learning about objects in Space, as well as their geography.</p>
-            <p class="paragraph">Here you can learn about planets, moons and minor planets of the Solar System and other systems.</p>
-            <h2 class="paragraphheader" id="WhatDoesGabrovaMean">What does Gabrova mean?</h2>
-            <p class="paragraph">2206 Gabrova is an asteroid located in the Asteroid Belt, discovered on April 1, 1976 by Russian astronomer Nikolai Chernykh at the Crimean Astrophysical Observatory.</p>
-            <p class="paragraph">Since it was discovered on April Fool's Day, the asteroid is named after the Bulgarian city of Gabrovo, known for its jokes and as the capital of humor and satire.</p>
         </section>
 
         <!--A footer-->
