--- a/pages/tno.html
+++ b/pages/tno.html
@@ -60,6 +60,36 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Trans-Neptunian objects</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#Discovery">Discovery</a>
+                </li>
+                <li>
+                    <a href="#Classification">Classification</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#KuiperBeltObjects">Kuiper belt objects</a>
+                        </li>
+                        <li>
+                            <a href="#ScatteredDiscObjects">Scattered disc objects</a>
+                        </li>
+                        <li>
+                            <a href="#ExtremeTransNeptunianObjects">Extreme trans-Neptunian objects</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#VisitedTNOs">Visited TNOs</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Pluto">Pluto</a>
+                        </li>
+                        <li>
+                            <a href="#Arrokoth">Arrokoth</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </aside>
 
         <aside class="asideright">
@@ -81,31 +111,31 @@
         <section class="maincontent">
             <p class="paragraph">A trans-Neptunian object (TNO) is a minor planet with an average distance from the Sun greater than that of Neptune. Trans-Neptunian objests are further divided into Kuiper belt objects, scattered disc objects and extreme trans-Neptunian objects. There are more than 2,000 TNOs, almost 700 of them are named.</p>
             <p class="paragraph">The first TNO to be discovered was Pluto in 1930. In 1992 a second object - 15760 Albion, was discovered. Pluto is the largest TNO and Eris is the most massive.</p>
-            <h2 class="paragraphheader">Discovery</h2>
+            <h2 class="paragraphheader" id="Discovery">Discovery</h2>
             <p class="paragraph">In the 1900s, it was suggested that a ninth planet existed beyond Neptune's orbit, which would explain the deviation of the actual from the expected orbits of Neptune. In 1930 Pluto was discovered, but was too small to explain these discrepancies. Still, it was considered a planet of the Solar System. In 1992 another TNO was discovered - 15760 Albion. This lead to further searches.</p>
             <p class="paragraph">With the discovery of more TNOs like Varuna, Ixion, Quaoar, Sedna and Haumea. With the discovery of Eris, the most massive TNO, the International Astronomical Union announced in 2006 that objects like Pluto and Eris would be classified as dwarf planets - a new class of objects.</p>
-            <h2 class="paragraphheader">Classification</h2>
+            <h2 class="paragraphheader" id="Classification">Classification</h2>
             <div class="articlediv">
-                <h3 class="paragraphsubheader">Kuiper belt objects</h3>
+                <h3 class="paragraphsubheader" id="KuiperBeltObjects">Kuiper belt objects</h3>
                 <p class="paragraph">The Kuiper belt contains objects with an average distance to the Sun of 30-55 AU and a small inclination from the ecliptic. Such objecs are further divided into classical (cubewanos) and resonant. The latter ones are locked in a orbital resonance with Neptune.</p>
                 <p class="paragraph">The biggest cubewanos are Haumea, Makemake and Quaoar, while the biggest resonant KBO is Pluto. Resonant KBOs with 2:3 resonance are thus called plutinos.</p>
             </div>
             <div class="articlediv">
-                <h3 class="paragraphsubheader">Scattered disc objects</h3>
+                <h3 class="paragraphsubheader" id="ScatteredDiscObjects">Scattered disc objects</h3>
                 <p class="paragraph">Unlike KBOs, SDOs have very eccentric and inclined orbits. The largest member of the scattered disc is Eris.</p>
             </div>
             <div class="articlediv">
-                <h3 class="paragraphsubheader">Extreme trans-Neptunian objects</h3>
+                <h3 class="paragraphsubheader" id="ExtremeTransNeptunianObjects">Extreme trans-Neptunian objects</h3>
                 <p class="paragraph">ETNOs are a group of minor planets with a semi-major axis greater than 150 AU and a perihelion of more than 30 AU. Currently, 12 such objects are known, the biggest of which is Sedna.</p>
             </div>
-            <h2 class="paragraphheader">Visited TNOs</h2>
+            <h2 class="paragraphheader" id="VisitedTNOs">Visited TNOs</h2>
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="180" height="180">
                     <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon" width="180" height="180">
                     <p class="caption">Pluto and it's biggest satellite - Charon.</p>
                 </div>
-                <h3 class="paragraphsubheader">Pluto</h3>
+                <h3 class="paragraphsubheader" id="Pluto">Pluto</h3>
                 <p class="paragraph">Pluto is the biggest TNO and dwarf planet in the Solar System. It is named after the Greek god of the underworld also known as Hades. Pluto has five satellites. The biggest moon - Charon, named after the ferryman of Hades, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.</p>
                 <p class="paragraph">Pluto and Charon were visited by New Horizon in 2015.</p>
             </div>
@@ -114,7 +144,7 @@
                     <img class="articleimage" src="../assets/images/tnos/arrokoth.png" alt="Arrokoth" width="168" height="240">
                     <p class="caption">486958 Arrokoth</p>
                 </div>
-                <h3 class="paragraphsubheader">Arrokoth</h3>
+                <h3 class="paragraphsubheader" id="Arrokoth">Arrokoth</h3>
                 <p class="paragraph">Arrokoth is a small TNO in the Kuiper belt. It was visited by New Horizons in 2019 and is the farthest from Earth object visited by a spacecraft. The name means "sky" in the extinct Powhatan language. It is a contact binary composed of two conjoined planetesimals.</p>
             </div>
         </section>
