Earth page, responsive navigation bar

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -60,6 +60,25 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Earth</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#FormationAndDevelopment">Formation and development</a>
+                </li>
+                <li>
+                    <a href="#FormationOfLife">Formation of life</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#SpontaneousSpawning">Spontaneous spawning</a>
+                        </li>
+                        <li>
+                            <a href="#Panspermia">Panspermia</a>
+                        </li>
+                        <li>
+                            <a href="#PrimordialSoup">Primordial soup</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </aside>
 
         <aside class="asideright">
@@ -79,6 +98,62 @@
         <!--The main page article-->
 
         <section class="maincontent">
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth" width="240" height="240">
+                    <p class="caption">Earth</p>
+                </div>
+                <p class="paragraph">
+                    Earth is a <a href="planet.html">planet</a> in the Solar System.
+                    It is the third planet from the Sun and the biggest of the terrestrial planets.
+                    It is the only place that is known to harbor life.
+                    Earth has one natural satellite - Moon.
+                </p>
+                <p class="paragraph">
+                    It contains liquid water on 71% of the surface and the remaining 29% is land.
+                    The crust is made up of several tectonic plates that create the various features on Earth's surface - mountain ranges, volcanoes, trenches and cause earthquakes.
+                    The liquid outer core of the Earth is responsible for the magnetosphere, which protects from solar and cosmic radiation.
+                </p>
+                <p class="paragraph">
+                    The athmosphere of Earth is made up of 78% nitrogen and 21% oxygen, with the remaining 1% consisting of other gases like argon and carbon dioxide.
+                    Carbon dioxide and other greenhouse gases capture part of the energy from the Sun.
+                    Those gases increase every year due to human activity, resulting in rising average temperatures.
+                    Water vapors form clouds in the athmosphere as a part of the water cycle.
+                </p>
+            </div>
+            <h2 class="paragraphheader" id="FormationAndDevelopment">Formation and development</h2>
+            <p class="paragraph">
+                Like other planets in the Solar System, the oldest Earth material dates back to 4.5 billion years.
+                It is believed that Earth was formed by a protoplanetary disc collapsing.
+                Million years after that, a protoplanet called Theia collided with Earth and formed the Moon in the process.
+            </p>
+            <p class="paragraph">
+                Earth's surface gradually cooled and a solid crust formed. 
+                Ice was brought by comets and other object, which turned into oceans by the volcanic activity.
+            </p>
+            <p class="paragraph">
+            <h2 class="paragraphheader" id="FormationOfLife">Formation of life</h2>
+                Between four and three and a half billion years ago the first life forms appeared.
+                Multiple theories exist on how life on Earth formed.
+            </p>
+                <h3 class="paragraphsubheader" id="SpontaneousSpawning">Spontaneous spawning</h3>
+                <p class="paragraph">
+                    Spontaneous spawning is an ancient theory, first mentioned by Aristotle.
+                    According to him, lower life forms formed from decaying organic matter.
+                    In 1668 Francesco Redi conducted an experiment, in which meat was left rotting, to see if maggots appeared, but none did, disproving the theory.
+                </p>
+                <h3 class="paragraphsubheader" id="Panspermia">Panspermia</h3>
+                <p class="paragraph">
+                    Another ancient theory dates back to Anaxagoras in the 5th century BC.
+                    It states that life exist throughout the universe and was brought to Earth by comets and asteroids.
+                    This theory does not mention how life formed, only the method it was carried to Earth.
+                </p>
+                <h3 class="paragraphsubheader" id="PrimordialSoup">Primordial soup</h3>
+                <p class="paragraph">
+                    In 19th century several people proposed that life might have formed from inorganic compounds.
+                    In 1924 Alexander Oparin and later in 1929 J. B. S. Haldane stated that the molecules constituting cells slowly self-organised from a so-called "primordial soup".
+                    Chemists Stanley Miller and Harold Urey successfuly simulated such conditions in 1952.
+                </p>
         </section>
 
         <!--A footer-->
