--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -191,7 +191,7 @@
             <p class="paragraph">
                 Exoplanets are yet to be studied for life. 
                 One metric for measuring habitability is the location of a planet. 
-                If a planet is orbiting in the habitable zone of it's host star, water could exist in all three states. 
+                If a planet is orbiting in the habitable zone of it's host <a href="star.html">star</a>, water could exist in all three states. 
                 Another metric is the size of a planet - planets with sizes similar to Earth are more likely to be similar in other aspects.
             </p>
         </section>
