--- a/pages/star.html
+++ b/pages/star.html
@@ -85,15 +85,27 @@
 
         <section class="maincontent">
             <div class="articlediv">
-                <div class="captionbox right" style="width:240px">
+                <div class="captionbox right" style="width:242px">
                     <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
                     <p class="caption">The Sun, a G-type star</p>
                 </div>
-                <p class="paragraph">A star is a celestial body than consists of plasma held by it's gravity and emits light. The Sun is the closest star to Earth. There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.</p>
-                <p class="paragraph">Stars are formed when a nebula collapses by it's own gravity. During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a black hole, depending on a star's mass.</p>
+                <p class="paragraph">
+                    A star is a celestial body than consists of plasma held by it's gravity and emits light. 
+                    The Sun is the closest star to <a href="earth.html">Earth</a>. 
+                    There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.
+                </p>
+                <p class="paragraph">
+                    Stars are formed when a nebula collapses by it's own gravity. 
+                    During it's life it fuses hydrogen into helium and eventually dies, forming a white dwarf, a neutron star or a black hole, depending on a star's mass.
+                </p>
             </div>
             <h2 class="paragraphheader" id="Classification">Classification</h2>
-            <p class="paragraph">Stars are classified based on their spectral characteristics. In order from hottest to coldest, they are: O, B, A, F, G, K and M. The Sun is a G-type star. The most common stars are M stars, making up around 75% of all main-sequence stars, while O stars are less than one in a million.</p>
+            <p class="paragraph">
+                Stars are classified based on their spectral characteristics. 
+                In order from hottest to coldest, they are: O, B, A, F, G, K and M. 
+                The Sun is a G-type star. 
+                The most common stars are M stars, making up around 75% of all main-sequence stars, while O stars are less than one in a million.
+            </p>
             <table>
                 <tr class="firstrow">
                     <th>Class</th><th>Effective temperature</th><th>Main-sequence mass</th><th>Main-sequence radius</th><th>Main-sequence luminosity</th><th>Fraction of main-sequence stars</th><th>Example main-sequence star</th>
